--- a/UI/src/styles.css
+++ b/UI/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: Nordic;
+  src: url('assets/fonts/Norse-KaWl.otf') format('opentype');
+}
+
+@font-face {
+  font-family: NordicBold;
+  src: url('assets/fonts/NorseBold-2Kge.otf') format('opentype');
+}
