--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,3 +1,29 @@
 <div class="container">
-  <h1 class="custom-font">About us</h1>
+  <h1 class="custom-font">{{'AboutUs.Title' | translate}}</h1>
+  <p>{{'AboutUs.Text1' | translate}}</p>
+  <p>{{'AboutUs.Text2' | translate}}</p>
+  <p>{{'AboutUs.Text3' | translate}}</p>
+  <p>{{'AboutUs.Text4' | translate}}</p>
+  <p>{{'AboutUs.Text5' | translate}}</p>
+  <div class="team-container">
+    <div class="team-member">
+      <img alt="Susi" class="member-image" src="../../../assets/images/susi.jpg">
+      <h2>{{'AboutUs.Susi.Title' | translate}}</h2>
+      <ul class="skills-list">
+        <li>{{'AboutUs.Susi.Skill1' | translate}}</li>
+        <li>{{'AboutUs.Susi.Skill2' | translate}}</li>
+        <li>{{'AboutUs.Susi.Skill3' | translate}}</li>
+      </ul>
+    </div>
+    <div class="team-member">
+      <img alt="Dominik" class="member-image" src="../../../assets/images/dominik.png">
+      <h2>{{'AboutUs.Dominik.Title' | translate}}</h2>
+      <ul class="skills-list">
+        <li>{{'AboutUs.Dominik.Skill1' | translate}}</li>
+        <li>{{'AboutUs.Dominik.Skill2' | translate}}</li>
+        <li>{{'AboutUs.Dominik.Skill3' | translate}}</li>
+      </ul>
+    </div>
+  </div>
+
 </div>
