--- a/UI/src/app/pages/footer/footer.component.scss
+++ b/UI/src/app/pages/footer/footer.component.scss
@@ -14,6 +14,8 @@
 }
 
 .copyright {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   align-self: center;
   margin-top: auto;
@@ -24,6 +26,7 @@
     margin-left: auto;
     margin-right: auto;
     color: red;
+    margin-bottom:  0;
   }
   font-weight: bold;
 }
@@ -49,4 +52,11 @@
 }
 .footer-cursor:hover {
   color: #007bff;
+}
+.version {
+  align-self: flex-start;
+  font-size: xx-small;
+  padding: 0;
+  margin-left: 10px;
+  color: #e7e6e2;
 }
