First draft fishing regulations Page

--- a/UI/src/app/pages/rules/rules.component.html
+++ b/UI/src/app/pages/rules/rules.component.html
@@ -1,3 +1,28 @@
 <div class="container">
-  <h1 class="custom-font">Regeln</h1>
+  <h1 class="custom-font">{{'Rules.Title' | translate}}</h1>
+  <p>{{'Rules.Introduction' | translate}}</p>
+  <ol>
+    <li>
+      <span class="list-title">{{'Rules.Rule1.Title' | translate}}</span>
+      <span class="text-break">{{'Rules.Rule1.Rule' | translate}}</span>
+    </li>
+    <li>
+      <span class="list-title">{{'Rules.Rule2.Title' | translate}}</span>
+      <span class="text-break">{{'Rules.Rule2.Rule' | translate}}</span>
+    </li>
+    <li>
+      <span class="list-title">{{'Rules.Rule3.Title' | translate}}</span>
+      <span class="text-break">{{'Rules.Rule3.Rule' | translate}}</span>
+    </li>
+    <li>
+      <span class="list-title">{{'Rules.Rule4.Title' | translate}}</span>
+      <span class="text-break">{{'Rules.Rule4.Rule' | translate}}</span>
+    </li>
+    <li>
+      <span class="list-title">{{'Rules.Rule5.Title' | translate}}</span>
+      <span class="text-break">{{'Rules.Rule5.Rule' | translate}}</span>
+    </li>
+  </ol>
+  <p>{{'Rules.ClosingWords' | translate}}</p>
+  <p>{{'Rules.Questions' | translate}}</p>
 </div>
