First draft arrival Page

--- a/UI/src/app/pages/footer/footer.component.html
+++ b/UI/src/app/pages/footer/footer.component.html
@@ -11,6 +11,7 @@
       <div class="footer-cursor" routerLink="/contact">{{'Footer.Contact' | translate}}</div>
       <div class="footer-cursor"  routerLink="/imprint">{{'Footer.Imprint' | translate}}</div>
       <div class="footer-cursor"  routerLink="/privacy">{{'Footer.Privacy' | translate}}</div>
+      <div class="footer-cursor"  routerLink="/arrival">{{'Footer.Arrival' | translate}}</div>
     </div>
   </div>
   <div class="copyright">
