--- a/UI/src/app/pages/navigation/navigation.component.html
+++ b/UI/src/app/pages/navigation/navigation.component.html
@@ -28,6 +28,11 @@
              routerLinkActive="active">{{'Navigation.About' | translate}}
           </a>
         </li>
+        <li class="nav-item">
+          <a (click)="isShown = false" class="nav-link brand" routerLink="/arrival"
+             routerLinkActive="active">{{'Navigation.Arrival' | translate}}
+          </a>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
